ucup membuat halaman ui dan menyambungkan menggunakan logic